# yt-dlp-gui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  build_gui.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/ytdlp_gui/: __init__.py  main.py
src/ytdlp_gui/core/: cookie_manager.py  download_manager.py  format_detector.py  history_manager.py  settings_manager.py
src/ytdlp_gui/gui/: main_window.py
src/ytdlp_gui/gui/components/: download_options.py  download_queue.py  format_selector.py  output_selector.py  progress_display.py  simple_url_input.py  url_input.py  video_preview.py
src/ytdlp_gui/utils/: logger.py  notifications.py
